configured csrf, csrf token accessed through http request then must include the token in future requests alongside the jwt token